<resources>
    <string name="app_name">AppLimpieza</string>
    <string name="txtLogin">Inicio de Sesión</string>
    <string name="txtHintEmailInput">Correo</string>
    <string name="txtHintPswInput">Contraseña</string>
    <string name="txtForgotPsw">¿Olvidó su contraseña?</string>
    <string name="txtBtnLogin">Iniciar Sesión</string>
    <string name="txtCreateAccount">¿No tienes cuenta todavía?</string>
    <string name="txtRegistro">Crear Cuenta</string>
    <string name="btnRegistrar">Registrarse</string>
    <string name="txtHintConfPsw">Confirmar Contraseña</string>
    <string name="txtHintNombre">Nombre</string>
    <string name="chbxCondiciones">Al aceptar los términos y condiciones, usted está entrando en un contrato legalmente vinculante con el proveedor de servicios.</string>
    <string name="txtRegQuestion">¿Ya tienes cuenta?</string>
    <string name="error_nombre_required">El nombre es obligatorio</string>
    <string name="error_email_required">El correo es obligatorio</string>
    <string name="error_email_invalid">El correo no tiene un formato válido</string>
    <string name="error_password_required">La contraseña es obligatoria</string>
    <string name="error_confirmar_password_required">Debes confirmar la contraseña</string>
    <string name="error_passwords_do_not_match">Las contraseñas no coinciden</string>
    <string name="error_condiciones_required">Es necesario aceptar las politicas para continuar</string>
    <string name="txtBtnRegistrar">Regístrate</string>
    <string name="txtMensajeRegistro">Únase a nuestra comunidad y experimente una búsqueda fluida de su relación.</string>
    <string name="txtBtnEnviar">Enviar</string>
    <string name="txtMessage">Mensaje</string>
    <string name="error_password_min_length">La contraseña debe tener mínimo 8 caracteres</string>
    <string name="login_failed">Login Fallido</string>
    <string name="loading_login_message">Iniciando sesión</string>
    <string name="sending_reset_email">Procesando recuperación de contraseña</string>
    <string name="reset_password_title">Recuperar Contraseña</string>
    <string name="txt_enviar">Enviar</string>
    <string name="txt_cancelar">Cancelar</string>
    <string name="registration_failed">Registro Fallido</string>
    <string name="loading_register_message">Procesando registro</string>
    <string name="perfil">Perfil</string>
    <string name="reset_email_failed">Falló la petición</string>
    <string name="reset_email_sent">Petición exitosa</string>
    <string name="todos">Todos</string>
    <string name="servicio_reparacion">Reparación</string>
    <string name="servicio_limpieza">Limpieza</string>
    <string name="servicio_decoracion">Decoración</string>
    <string name="servicio_instalacion">Instalación</string>
    <string name="servicio">Servicio</string>
    <string name="contratos">Contratos</string>
    <string name="galeria">Galería</string>
    <string name="resenas">Reseñas</string>
    <string name="txtCreateAccount">¿No tienes cuenta todavía? Regístrate</string>
    <string name="txtContinuar">Continuar</string>
    <string name="titleAddImage">Añade fotos sobre tus servicios</string>
    <string name="descriptionAddTitle">Demuestra que realizas un excelente trabajo</string>
</resources>