<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/tfPswLogin"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="356dp"
        android:layout_height="49dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/txtHintPswInput"
        android:inputType="text|textPassword"
        android:outlineProvider="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tfEmailLogin" />

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="125dp"
        android:fontFamily="@font/roboto"
        android:text="@string/txtLogin"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tfEmailLogin"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="356dp"
        android:layout_height="49dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="43dp"
        android:ems="10"
        android:hint="@string/txtHintEmailInput"
        android:inputType="textEmailAddress"
        android:outlineProvider="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLogin" />

    <TextView
        android:id="@+id/txtForgotPsw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="33dp"
        android:text="@string/txtForgotPsw"
        android:textColor="@color/primario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfPswLogin" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="339dp"
        android:layout_height="56dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/secundario"
        android:fontFamily="@font/roboto"
        android:text="@string/txtBtnLogin"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtForgotPsw" />

    <TextView
        android:id="@+id/txtCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/roboto"
        android:text="@string/txtCreateAccount"
        android:textColor="@color/primario"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>